changes to e3sm_diags instead of acme_diags

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,7 +21,7 @@ requirements:
   
   run:
     - peewee
-    - acme_diags >=1.2.1
+    - e3sm_diags >=1.2.1
     - markupsafe
     - matplotlib
     - nco ==4.7.3
