--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -3,7 +3,7 @@ package:
   version: {{ environ['VERSION'] }}
 
 source:
-  git_url: git://github.com/ACME-Climate/acme_workflow
+  git_url: git://github.com/E3SM-Project/processflow.git
   git_tag: {{ environ['TAG'] }}
 
 build:
