--- a/tests/test_configs/test_amwg_complete.cfg
+++ b/tests/test_configs/test_amwg_complete.cfg
@@ -1,7 +1,7 @@
 [global]
-project_path = /p/user_pub/e3sm/baldwin32/testing_data/
-email = baldwin32@llnl.gov
-native_grid_cleanup = False
+    project_path = /p/user_pub/e3sm/baldwin32/testing_data/
+    email = baldwin32@llnl.gov
+    native_grid_cleanup = False
 
 [img_hosting]
     img_host_server = acme-viewer.llnl.gov
@@ -13,14 +13,23 @@ native_grid_cleanup = False
     end_year = 2
     [[20180129.DECKv1b_piControl.ne30_oEC.edison]]
         transfer_type = local
-        local_path = /p/user_pub/e3sm/baldwin32/testing_data/input/
+        local_path = /p/user_pub/e3sm/baldwin32/testing_data/input/20180129.DECKv1b_piControl.ne30_oEC.edison
         short_name = piControl_testing
+        native_grid_name = ne30
+        native_mpas_grid_name = oEC60to30v3
+        data_types = all
+        job_types = all
+    [[20180215.DECKv1b_1pctCO2.ne30_oEC.edison]]
+        transfer_type = local
+        local_path = /p/user_pub/e3sm/baldwin32/testing_data/input/20180215.DECKv1b_1pctCO2.ne30_oEC.edison
+        short_name = 1pctCO2_testing
         native_grid_name = ne30
         native_mpas_grid_name = oEC60to30v3
         data_types = all
         job_types = all
     [[comparisons]]
         20180129.DECKv1b_piControl.ne30_oEC.edison = obs
+        20180215.DECKv1b_1pctCO2.ne30_oEC.edison = 20180129.DECKv1b_piControl.ne30_oEC.edison
 
 [post-processing]
     [[climo]]
@@ -29,14 +38,14 @@ native_grid_cleanup = False
         regrid_map_path = /p/cscratch/acme/data/map_ne30np4_to_fv129x256_aave.20150901.nc
 
 [diags]
-    [[e3sm_diags]]
+    [[amwg]]
         run_frequency = 2
-        backend = mpl
-        reference_data_path = /p/cscratch/acme/data/obs_for_acme_diags
+        diag_home = /p/cscratch/acme/amwg/amwg_diag
+        sets = all
 
 [data_types]
     [[atm]]
         remote_path = 'REMOTE_PATH/archive/atm/hist'
         file_format = 'CASEID.cam.h0.YEAR-MONTH.nc'
-        local_path = 'LOCAL_PATH/CASEID/atm'
+        local_path = 'LOCAL_PATH/atm'
         monthly = True
