Updates sample run config with cmor options

--- a/run.cfg
+++ b/run.cfg
@@ -39,7 +39,7 @@
         # which data types should be handled by this case, this case will only grab atm data
         data_types = atm
         # which job types should be run on this case, this case will run all the defined jobs
-        job_types = amwg, climo
+        job_types = amwg, climo, timeseries
     [[case.id.number.2]]
         # this case is going to be transfered using globus
         transfer_type = globus
@@ -53,7 +53,7 @@
         # this case will grab all the datatypes defined below
         data_types = all
         # this case will only generate climos and run amwg
-        job_types = amwg, climo
+        job_types = amwg, climo, timeseries
     [[case.id.number.3]]
         # this case will be moved with sftp
         transfer_type = sftp
@@ -94,7 +94,7 @@
 
     # optional config for generating timeseries
     [[timeseries]]
-        run_frequency = 50
+        run_frequency = 50, 100
         # the timeseries job will also generate regridded timeseries
         destination_grid_name = fv129x256
         regrid_map_path = /p/cscratch/acme/data/map_ne30np4_to_fv129x256_aave.20150901.nc
@@ -122,6 +122,24 @@
             # ocn data only needs a regrid name and map
             regrid_map_path = ~/grids/map_oEC60to30v3_to_0.5x0.5degree_bilinear.nc
             destination_grid_name = 0.5x0.5degree_bilinear
+
+    # cmor requires that the timeseries job product required variables
+    [[cmor]]
+        run_frequency = 100
+        # the optional path to a folder with cmor handlers see
+        custom_handler_path = /export/baldwin32/projects/my_project/my_handlers
+        # variables that should be cmorized. These must all be present in the timeseries job variables
+        variable_list = CLDTOT, FSNS, PRECC, TS, QINTR, QOVER
+        # the master tables provided by the CMOR project, see: https://github.com/PCMDI/cmor
+        cmor_tables_path = /export/baldwin32/projects/cmor/Tables
+        # an optional argument to provide a path for custom cmor variable handlers see: https://github.com/E3SM-Project/e3sm_to_cmip
+        custom_handlers_path = /export/baldwin32/projects/my_custom_cmor_handlers
+        [[[case.id.number.1]]]
+            # the user supplied input metadata for the cmorized output
+            user_input_json_path = /export/baldwin32/projects/my_project/user_input_case_1.json
+        [[[case.id.number.2]]]
+            # the user supplied input metadata for the cmorized output
+            user_input_json_path = /export/baldwin32/projects/my_project/user_input_case_2.json
 
 # optional config for running diagnostics, remove any of these sections
 # to turn off that diagnostic, or the whole thing if you're just running
