Increment version for 2.1.0

--- a/run.cfg
+++ b/run.cfg
@@ -123,7 +123,7 @@
             regrid_map_path = ~/grids/map_oEC60to30v3_to_0.5x0.5degree_bilinear.nc
             destination_grid_name = 0.5x0.5degree_bilinear
 
-    # cmor requires that the timeseries job product required variables
+    # cmor requires that the timeseries job produce required variables
     [[cmor]]
         run_frequency = 100
         # the optional path to a folder with cmor handlers see
