Changes default variable list for CMOR to run all variables

--- a/run.cfg
+++ b/run.cfg
@@ -129,7 +129,7 @@
         # the optional path to a folder with cmor handlers see
         custom_handler_path = /export/baldwin32/projects/my_project/my_handlers
         # variables that should be cmorized. These must all be present in the timeseries job variables
-        variable_list = CLDTOT, FSNS, PRECC, TS, QINTR, QOVER
+        variable_list = all
         # the master tables provided by the CMOR project, see: https://github.com/PCMDI/cmor
         cmor_tables_path = /export/baldwin32/projects/cmor/Tables
         # an optional argument to provide a path for custom cmor variable handlers see: https://github.com/E3SM-Project/e3sm_to_cmip
