--- a/run.cfg
+++ b/run.cfg
@@ -39,7 +39,10 @@
         # which data types should be handled by this case, this case will only grab atm data
         data_types = atm
         # which job types should be run on this case, this case will run all the defined jobs
-        job_types = amwg, climo, timeseries
+        job_types = amwg, climo, timeseries    
+        # for each case, list which cases it should have diagnostics run on it, 
+        # using 'obs' for model-vs-obs, and 'all' to run all possibilities
+        comparisons = obs
     [[case.id.number.2]]
         # this case is going to be transfered using globus
         transfer_type = globus
@@ -54,6 +57,8 @@
         data_types = all
         # this case will only generate climos and run amwg
         job_types = amwg, climo, timeseries
+        # defined comparisons for this case
+        comparisons = case.id.number.1, case.id.number.3
     [[case.id.number.3]]
         # this case will be moved with sftp
         transfer_type = sftp
@@ -67,16 +72,9 @@
         data_types = atm, lnd, ocn
         # this case will only generate climos and run e3sm_diags
         job_types = climo, e3sm_diags, timeseries
-    # this section defines which comparisons should be applied to which case
-    # for each case, list which cases it should have diagnostics run on it, 
-    # using 'obs' for model-vs-obs, and 'all' to run all possibilities
-    [[comparisons]]
-        # this case will only run against obs
-        case.id.number.1 = obs
-        # this case will be run against case_1 and case_3 but not obs
-        case.id.number.2 = case.id.number.1, case.id.number.3
-        # this case will be run against all other cases as well as obs
-        case.id.number.3 = all
+        # defined comparisons for this case
+        comparisons = all
+
 
 # this section defines all the post processing jobs that should be run
 # any of these sections can be removed to turn that job off
