--- a/samples/run_picontrol.cfg
+++ b/samples/run_picontrol.cfg
@@ -19,8 +19,7 @@
         native_mpas_grid_name = oEC60to30v3
         data_types = atm, lnd
         job_types = all
-    [[comparisons]]
-        20180129.DECKv1b_piControl.ne30_oEC.edison = obs
+        comparisons = obs
 
 [post-processing]
     [[climo]]
