Adds MPAS-Analysis config options to the run.cfg

--- a/run.cfg
+++ b/run.cfg
@@ -165,6 +165,23 @@
         run_frequency = 50
         # path to aprime code
         aprime_code_path = /p/cscratch/acme/data/a-prime
+    
+    # the MPAS-Analysis diagnostic suite
+    [[mpas_analysys]]
+        # Directory for mapping files (if they have been generated already). If mapping
+        # files needed by the analysis are not found here, they will be generated and
+        # placed in the output mappingSubdirectory
+        mapping_directory = /space2/diagnostics/mpas_analysis/maps
+        # a list of which plots to generate, see MPAS-Analysis documentation for details or run "mpas_analysis --list" to get a list
+        generate_plots = all_publicObs
+        # should mpas analysis use the start of the case for time series and nino index plots
+        start_year_offset = True
+        # path to MPAS-Analysis observation directories
+        ocn_obs_data_path = /space2/diagnostics/observations/Ocean/
+        seaice_obs_data_path = /space2/diagnostics/observations/SeaIce/
+        region_mask_path = /space2/diagnostics/mpas_analysis/region_masks
+        run_MOC = True
+
 
 # data type definitions. If all the cases use short term archiving nothing should have to change
 # for each data type section, you can add an additional sub-section with the case name to denote specific handling
