Adds the html output directory to the mpas config

--- a/resources/mpas_a_vs_obs.cfg
+++ b/resources/mpas_a_vs_obs.cfg
@@ -20,7 +20,7 @@ seaIceStreamsFileName = {{ iceStreamsPath }}
 
 [output]
 baseDirectory = {{ outputBasePath }}
-htmlSubdirectory = html
+htmlSubdirectory = {{ htmlSubdirectory }}
 generate = {{ generatePlots }}
 
 [climatology]
