Fixes issues with the config generation for mpas

--- a/resources/mpas_a_vs_obs.cfg
+++ b/resources/mpas_a_vs_obs.cfg
@@ -13,10 +13,10 @@ seaIceHistorySubdirectory = {{ iceHistSubPath }}
 mpasMeshName = {{ meshName }}
 mappingDirectory = {{ mappingPath }}
 
-oceanNamelistFileName = {{ ocnNamePath }}
-oceanStreamsFileName = {{ ocnStreamsPath }}
-seaIceNamelistFileName = {{ iceNamePath }}
-seaIceStreamsFileName = {{ iceStreamsPath }}
+oceanNamelistFileName = {{ ocnNamelistName }}
+oceanStreamsFileName = {{ ocnStreamsName }}
+seaIceNamelistFileName = {{ iceNamelistName }}
+seaIceStreamsFileName = {{ iceStreamsName }}
 
 [output]
 baseDirectory = {{ outputBasePath }}
