--- a/run.cfg
+++ b/run.cfg
@@ -181,6 +181,8 @@
         seaice_obs_data_path = /space2/diagnostics/observations/SeaIce/
         region_mask_path = /space2/diagnostics/mpas_analysis/region_masks
         run_MOC = True
+        ocean_namelist_name = mpaso_in
+        seaice_namelist_name = mpassi_in
 
 
 # data type definitions. If all the cases use short term archiving nothing should have to change
