Updates to the unit tests, adds num_workers arg to e3sm_diags

--- a/tests/test_configs/e3sm_diags_complete.cfg
+++ b/tests/test_configs/e3sm_diags_complete.cfg
@@ -13,14 +13,13 @@ native_grid_cleanup = False
     end_year = 2
     [[20180129.DECKv1b_piControl.ne30_oEC.edison]]
         transfer_type = local
-        local_path = /p/user_pub/e3sm/baldwin32/testing_data/input/
+        local_path = /p/user_pub/work/E3SM/1_0/piControl/1deg_atm_60-30km_ocean
         short_name = piControl_testing
         native_grid_name = ne30
         native_mpas_grid_name = oEC60to30v3
         data_types = all
         job_types = all
-    [[comparisons]]
-        20180129.DECKv1b_piControl.ne30_oEC.edison = obs
+        comparisons = obs
 
 [post-processing]
     [[climo]]
@@ -36,7 +35,7 @@ native_grid_cleanup = False
 
 [data_types]
     [[atm]]
-        remote_path = 'REMOTE_PATH/archive/atm/hist'
+        remote_path = 'REMOTE_PATH/input/atm/'
         file_format = 'CASEID.cam.h0.YEAR-MONTH.nc'
-        local_path = 'LOCAL_PATH/CASEID/atm'
+        local_path = 'LOCAL_PATH/atmos/native/model-output/mon/ens1/v1/'
         monthly = True
