--- a/tests/test_configs/valid_config_from_scratch.cfg
+++ b/tests/test_configs/valid_config_from_scratch.cfg
@@ -9,11 +9,12 @@ local_globus_uuid = a871c6de-2acd-11e7-bc7c-22000b9a448b
     end_year = 2
     [[20180129.DECKv1b_piControl.ne30_oEC.edison]]
         transfer_type = local
-        local_path = /p/user_pub/e3sm/baldwin32/testing/many_model/input/20180129.DECKv1b_piControl.ne30_oEC.edison/
+        local_path = /p/user_pub/work/E3SM/1_0/piControl/1deg_atm_60-30km_ocean
         short_name = piControl
         native_grid_name = ne30
         native_mpas_grid_name = oEC60to30v3
         data_types = all
+        job_types = all
 
 [post-processing]
     [[climo]]
@@ -25,5 +26,5 @@ local_globus_uuid = a871c6de-2acd-11e7-bc7c-22000b9a448b
     [[atm]]
         remote_path = 'REMOTE_PATH/archive/atm/hist'
         file_format = 'CASEID.cam.h0.YEAR-MONTH.nc'
-        local_path = '/p/user_pub/e3sm/baldwin32/testing/many_model/input/CASEID/atm'
+        local_path = 'LOCAL_PATH/atmos/native/model-output/mon/ens1/v1/'
         monthly = True
