--- a/tests/test_configs/valid_config_from_scratch_globus.cfg
+++ b/tests/test_configs/valid_config_from_scratch_globus.cfg
@@ -15,6 +15,7 @@ local_globus_uuid = a871c6de-2acd-11e7-bc7c-22000b9a448b
         native_grid_name = ne30
         native_mpas_grid_name = oEC60to30v3
         data_types = all
+        job_types = all
 
 [post-processing]
     [[climo]]
