--- a/tests/test_configs/filemanager_partial_data.cfg
+++ b/tests/test_configs/filemanager_partial_data.cfg
@@ -1,26 +1,24 @@
 [global]
-project_path = /p/user_pub/e3sm/baldwin32/testing_data/
+project_path = /p/user_pub/e3sm/baldwin32/testing/empty/
 email = baldwin32@llnl.gov
 native_grid_cleanup = False
 
 [img_hosting]
     img_host_server = acme-viewer.llnl.gov
     host_directory = /var/www/acme/acme-diags/baldwin32/
-    url_prefix = 'baldwin32'
+    url_prefix = baldwin32
 
 [simulations]
     start_year = 1
     end_year = 3
     [[20180129.DECKv1b_piControl.ne30_oEC.edison]]
         transfer_type = local
-        local_path = /p/user_pub/e3sm/baldwin32/testing_data/input/20180129.DECKv1b_piControl.ne30_oEC.edison/
-        short_name = piControl_testing
+        local_path = /p/user_pub/work/E3SM/1_0/piControl/1deg_atm_60-30km_ocean
+        short_name = piControl
         native_grid_name = ne30
         native_mpas_grid_name = oEC60to30v3
         data_types = all
         job_types = all
-    [[comparisons]]
-        20180129.DECKv1b_piControl.ne30_oEC.edison = obs
 
 [post-processing]
     [[climo]]
@@ -28,22 +26,18 @@ native_grid_cleanup = False
         destination_grid_name = fv129x256
         regrid_map_path = /p/cscratch/acme/data/map_ne30np4_to_fv129x256_aave.20150901.nc
 
-[diags]
-    [[e3sm_diags]]
-        run_frequency = 2
-        backend = mpl
-        reference_data_path = /p/cscratch/acme/data/obs_for_acme_diags
-
 [data_types]
     [[atm]]
-        remote_path = 'REMOTE_PATH/archive/atm/hist'
         file_format = 'CASEID.cam.h0.YEAR-MONTH.nc'
-        local_path = '/p/user_pub/e3sm/baldwin32/testing2/many_model/input/CASEID/atm'
+        local_path = 'LOCAL_PATH/atmos/'
         monthly = True
         [[[20180129.DECKv1b_piControl.ne30_oEC.edison]]]
-            local_path = 'LOCAL_PATH/atm'
-    [[ocn_streams]]
-        remote_path = 'REMOTE_PATH/run'
-        file_format = 'streams.ocean'
-        local_path = '/p/user_pub/e3sm/baldwin32/testing2/many_model/input/CASEID/mpas'
+            local_path = 'LOCAL_PATH/atmos/native/model-output/mon/ens1/v1/'
+    [[ocn]]
+        file_format = 'mpaso.hist.am.timeSeriesStatsMonthly.0001-01-01.nc'
+        local_path = 'LOCAL_PATH/ocean/native/model-output/mon/ens1/v1'
+        monthly = False
+    [[dummy]]
+        file_format = 'dummy.nc'
+        local_path = 'LOCAL_PATH/ocean/native/model-output/mon/ens1/v1'
         monthly = False
