--- a/tests/test_configs/invalid_config_missing_climo.cfg
+++ b/tests/test_configs/invalid_config_missing_climo.cfg
@@ -14,8 +14,8 @@ local_globus_uuid = a871c6de-2acd-11e7-bc7c-22000b9a448b
         native_grid_name = ne30
         native_mpas_grid_name = oEC60to30v3
         data_types = atm
-    [[comparisons]]
-        20180129.DECKv1b_piControl.ne30_oEC.edison = obs
+        job_types = all
+        comparisons = obs
 
 [diags]
     [[amwg]]
