fixes mpas-analysis typo

--- a/run.cfg
+++ b/run.cfg
@@ -167,7 +167,7 @@
         aprime_code_path = /p/cscratch/acme/data/a-prime
     
     # the MPAS-Analysis diagnostic suite
-    [[mpas_analysys]]
+    [[mpas_analysis]]
         # Directory for mapping files (if they have been generated already). If mapping
         # files needed by the analysis are not found here, they will be generated and
         # placed in the output mappingSubdirectory
