--- a/tests/test_configs/test_amwg_complete.cfg
+++ b/tests/test_configs/test_amwg_complete.cfg
@@ -1,41 +1,40 @@
 [global]
-    project_path = /p/user_pub/e3sm/baldwin32/testing_data/
+    project_path = /p/user_pub/e3sm/baldwin32/testing/amwg
     email = baldwin32@llnl.gov
     native_grid_cleanup = False
 
 [img_hosting]
     img_host_server = acme-viewer.llnl.gov
     host_directory = /var/www/acme/acme-diags/baldwin32/
-    url_prefix = 'baldwin32'
+    url_prefix = baldwin32
 
 [simulations]
     start_year = 1
     end_year = 2
     [[20180129.DECKv1b_piControl.ne30_oEC.edison]]
         transfer_type = local
-        local_path = /p/user_pub/e3sm/baldwin32/testing_data/input/20180129.DECKv1b_piControl.ne30_oEC.edison
-        short_name = piControl_testing
+        local_path = /p/user_pub/work/E3SM/1_0/piControl/1deg_atm_60-30km_ocean
+        short_name = testing_piControl
         native_grid_name = ne30
         native_mpas_grid_name = oEC60to30v3
         data_types = all
         job_types = all
+        comparisons = obs
     [[20180215.DECKv1b_1pctCO2.ne30_oEC.edison]]
         transfer_type = local
-        local_path = /p/user_pub/e3sm/baldwin32/testing_data/input/20180215.DECKv1b_1pctCO2.ne30_oEC.edison
-        short_name = 1pctCO2_testing
+        local_path = /p/user_pub/work/E3SM/1_0/1pctCO2/1deg_atm_60-30km_ocean
+        short_name = testing_1pctCO2
         native_grid_name = ne30
         native_mpas_grid_name = oEC60to30v3
         data_types = all
         job_types = all
-    [[comparisons]]
-        20180129.DECKv1b_piControl.ne30_oEC.edison = obs
-        20180215.DECKv1b_1pctCO2.ne30_oEC.edison = 20180129.DECKv1b_piControl.ne30_oEC.edison
+        comparisons = 20180129.DECKv1b_piControl.ne30_oEC.edison
 
 [post-processing]
     [[climo]]
         run_frequency = 2
-        destination_grid_name = fv129x256
-        regrid_map_path = /p/cscratch/acme/data/map_ne30np4_to_fv129x256_aave.20150901.nc
+        destination_grid_name = 180x360
+        regrid_map_path = ~zender1/data/maps/map_ne30np4_to_cmip6_180x360_aave.20181001.nc
 
 [diags]
     [[amwg]]
@@ -45,7 +44,6 @@
 
 [data_types]
     [[atm]]
-        remote_path = 'REMOTE_PATH/archive/atm/hist'
         file_format = 'CASEID.cam.h0.YEAR-MONTH.nc'
-        local_path = 'LOCAL_PATH/atm'
+        local_path = 'LOCAL_PATH/atmos/native/model-output/mon/ens1/v1/'
         monthly = True
