Gets 11/13 module tests passing. The last two need dummy data generated to get working

--- a/tests/test_configs/invalid_config_bad_transfer.cfg
+++ b/tests/test_configs/invalid_config_bad_transfer.cfg
@@ -4,11 +4,14 @@
     native_grid_cleanup = False
 
 [simulations]
+    start_year = 1
+    end_year = 2
     [[20180129.DECKv1b_piControl.ne30_oEC.edison]]
         short_name = piControl
         native_grid_name = ne30
         native_mpas_grid_name = oEC60to30v3
         data_types = atm
+        job_types = all
     [[test.case.2]]
         transfer_type = local
     [[test.case.3]]
