--- a/tests/test_configs/valid_config_timeseries.cfg
+++ b/tests/test_configs/valid_config_timeseries.cfg
@@ -14,13 +14,14 @@ local_globus_uuid = a871c6de-2acd-11e7-bc7c-22000b9a448b
         native_grid_name = ne30
         native_mpas_grid_name = oEC60to30v3
         data_types = all
-        job_types = climo
+        job_types = timeseries
 
 [post-processing]
-    [[climo]]
+    [[timeseries]]
         run_frequency = 2
         destination_grid_name = fv129x256
         regrid_map_path = /p/cscratch/acme/data/map_ne30np4_to_fv129x256_aave.20150901.nc
+        atm = FSNTOA
 
 [data_types]
     [[atm]]
