--- a/tests/test_configs/valid_config_simple.cfg
+++ b/tests/test_configs/valid_config_simple.cfg
@@ -1,15 +1,12 @@
 [global]
-project_path = /p/user_pub/e3sm/baldwin32/testing_data
-email = baldwin32@llnl.gov
-native_grid_cleanup = False
-local_globus_uuid = a871c6de-2acd-11e7-bc7c-22000b9a448b
+    project_path = ""
 
 [simulations]
     start_year = 1
     end_year = 2
     [[20180129.DECKv1b_piControl.ne30_oEC.edison]]
         transfer_type = local
-        local_path = /p/user_pub/work/E3SM/1_0/piControl/1deg_atm_60-30km_ocean
+        local_path = ""
         short_name = piControl
         native_grid_name = ne30
         native_mpas_grid_name = oEC60to30v3
@@ -20,10 +17,10 @@ local_globus_uuid = a871c6de-2acd-11e7-bc7c-22000b9a448b
     [[climo]]
         run_frequency = 2
         destination_grid_name = fv129x256
-        regrid_map_path = /p/cscratch/acme/data/map_ne30np4_to_fv129x256_aave.20150901.nc
+        regrid_map_path = /dummy/path
 
 [data_types]
     [[atm]]
         file_format = 'CASEID.cam.h0.YEAR-MONTH.nc'
-        local_path = 'LOCAL_PATH/atmos/native/model-output/mon/ens1/v1/'
+        local_path = 'LOCAL_PATH/input'
         monthly = True
