Updates and cleans up the sample configs

--- a/samples/run_historical_h1_vs_historical_h2.cfg
+++ b/samples/run_historical_h1_vs_historical_h2.cfg
@@ -29,6 +29,7 @@
         native_mpas_grid_name = oEC60to30v3
         data_types = atm
         job_types = all
+        # run diagnostics with H2_vs_H1 as well as H2_vs_obs
         comparisons = obs, 20180215.DECKv1b_H1.ne30_oEC.edison
 
 
@@ -43,6 +44,7 @@
         run_frequency = 5
         backend = mpl
         reference_data_path = /p/cscratch/acme/data/obs_for_acme_diags
+        num_workers = 32
 
 [data_types]
     [[atm]]
