Initial commit of file_cleanup

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -23,14 +23,12 @@ requirements:
     - pip
     - python
     - setuptools
+    - mpas-analysis
+    - ncl
     - nco
     - e3sm_diags >=1.6.0
     - e3sm_to_cmip
     - peewee
     - configobj
     - beautifulsoup4
-    - paramiko
     - jinja2
-    - globus-sdk ==1.1.1
-    - globus-cli ==1.1.2
-    - jmespath
