Issues with MPAS-Analysis fixed

--- a/processflow/resources/mpas_a_vs_obs.cfg
+++ b/processflow/resources/mpas_a_vs_obs.cfg
@@ -11,12 +11,15 @@ runSubdirectory = {{ restartSubPath }}
 oceanHistorySubdirectory = {{ ocnHistSubPath }}
 seaIceHistorySubdirectory = {{ iceHistSubPath }}
 mpasMeshName = {{ meshName }}
-mappingDirectory = {{ mappingPath }}
 
 oceanNamelistFileName = {{ ocnNamelistName }}
 oceanStreamsFileName = {{ ocnStreamsName }}
 seaIceNamelistFileName = {{ iceNamelistName }}
 seaIceStreamsFileName = {{ iceStreamsName }}
+
+[diagnostics]
+baseDirectory = {{ diagnosticsPath }}
+
 
 [output]
 baseDirectory = {{ outputBasePath }}
