--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -8,7 +8,8 @@ source:
 
 build:
   script: "{{ PYTHON }} -m pip install . --no-deps -vv"
-  number: {{ environ['BUILD_NAME'] }}
+  string: {{ environ['BUILD_NAME'] }}
+  noarch: python
 
 about:
     home: https://github.com/E3SM-Project/processflow
