Build script and recipe update

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -23,7 +23,7 @@ requirements:
   run:
     - python {{ python }}
     - mpas-analysis >=1.2.5
-    - nco
+    - nco >=4.8.1
     - e3sm_diags >=1.7.1
     - e3sm_to_cmip >=1.2.2
     - peewee >=3.10.0
