Updates to e3sm_diags

--- a/sample_configs/run_bcrc_post_processing.cfg
+++ b/sample_configs/run_bcrc_post_processing.cfg
@@ -41,6 +41,42 @@
         data_types = atm, lnd
         job_types = climo, timeseries
 
+    [[20190308.CNTL_CNPECACNT_20TR.ne30_oECv3.edison]]
+        local_path = /p/user_pub/work/E3SM/1_1_ECA/piControl/
+        short_name = piControl-ctc
+        native_grid_name = ne30
+        native_mpas_grid_name = oEC60to30v3
+        data_types = atm, lnd
+        job_types = climo, timeseries    
+    [[20190309.BCRC_CNPECACNT_20TR.ne30_oECv3.edison]]
+        local_path = /p/user_pub/work/E3SM/1_1_ECA/hist-BCRC/
+        short_name = BCRC-ctc
+        native_grid_name = ne30
+        native_mpas_grid_name = oEC60to30v3
+        data_types = atm, lnd
+        job_types = climo, timeseries
+    [[20190309.BCRD_CNPECACNT_20TR.ne30_oECv3.edison]]
+        local_path = /p/user_pub/work/E3SM/1_1_ECA/hist-BCRD/
+        short_name = BCRD-ctc
+        native_grid_name = ne30
+        native_mpas_grid_name = oEC60to30v3
+        data_types = atm, lnd
+        job_types = climo, timeseries
+    [[20190308.BDRC_CNPECACNT_20TR.ne30_oECv3.edison]]
+        local_path = /p/user_pub/work/E3SM/1_1_ECA/hist-BDRC/
+        short_name = BDRC-ctc
+        native_grid_name = ne30
+        native_mpas_grid_name = oEC60to30v3
+        data_types = atm, lnd
+        job_types = climo, timeseries
+    [[20190308.BDRD_CNPECACNT_20TR.ne30_oECv3.edison]]
+        local_path = /p/user_pub/work/E3SM/1_1_ECA/hist-BDRD/
+        short_name = BDRD-ctc
+        native_grid_name = ne30
+        native_mpas_grid_name = oEC60to30v3
+        data_types = atm, lnd
+        job_types = climo, timeseries
+
 [post-processing]
     [[climo]]
         run_frequency = 165
