--- a/run.cfg
+++ b/run.cfg
@@ -39,10 +39,12 @@
         # which data types should be handled by this case, this case will only grab atm data
         data_types = atm
         # which job types should be run on this case, this case will run all the defined jobs
-        job_types = amwg, climo, timeseries    
+        job_types = amwg, climo, timeseries, cmor
         # for each case, list which cases it should have diagnostics run on it, 
         # using 'obs' for model-vs-obs, and 'all' to run all possibilities
         comparisons = obs
+        # CMIP6 metadata for this case
+        user_input_json_path = /export/baldwin32/projects/my_project/user_input_case_1.json
     [[case.id.number.2]]
         # this case is going to be transfered using globus
         transfer_type = globus
@@ -56,9 +58,11 @@
         # this case will grab all the datatypes defined below
         data_types = all
         # this case will only generate climos and run amwg
-        job_types = amwg, climo, timeseries
+        job_types = amwg, climo, timeseries, cmor
         # defined comparisons for this case
         comparisons = case.id.number.1, case.id.number.3
+        # CMIP6 metadata for this case
+        user_input_json_path = /export/baldwin32/projects/my_project/user_input_case_1.json
     [[case.id.number.3]]
         # this case will be moved with sftp
         transfer_type = sftp
@@ -71,9 +75,11 @@
         # this case will use atm as well as lnd data
         data_types = atm, lnd, ocn
         # this case will only generate climos and run e3sm_diags
-        job_types = climo, e3sm_diags, timeseries
+        job_types = climo, e3sm_diags, timeseries, cmor
         # defined comparisons for this case
         comparisons = all
+        # CMIP6 metadata for this case
+        user_input_json_path = /export/baldwin32/projects/my_project/user_input_case_1.json
 
 
 # this section defines all the post processing jobs that should be run
@@ -101,7 +107,6 @@
         # each name after the data type is a variable that will be extracted as a timeseries, these are simply examples
         atm = FSNTOA, FLUT, FSNT, FLNT, FSNS, FLNS, SHFLX, QFLX, PRECC, PRECL, PRECSC, PRECSL, TS, TREFHT
         lnd = SOILICE, SOILLIQ, SOILWATER_10CM, QINTR, QOVER, QRUNOFF, QSOIL, QVEGT, TSOI
-        ocn = ssh
     
     # optional config for regridding model output
     [[regrid]]
@@ -132,12 +137,17 @@
         cmor_tables_path = /export/baldwin32/projects/cmor/Tables
         # an optional argument to provide a path for custom cmor variable handlers see: https://github.com/E3SM-Project/e3sm_to_cmip
         custom_handlers_path = /export/baldwin32/projects/my_custom_cmor_handlers
-        [[[case.id.number.1]]]
-            # the user supplied input metadata for the cmorized output
-            user_input_json_path = /export/baldwin32/projects/my_project/user_input_case_1.json
-        [[[case.id.number.2]]]
-            # the user supplied input metadata for the cmorized output
-            user_input_json_path = /export/baldwin32/projects/my_project/user_input_case_2.json
+        
+        # list of CMIP6 tables to process the data for. The depedencies of each of these
+        # must be present in the list if time-series variablse for the given data type
+        [[[Amon]]]
+            variables = tas, ts, ps, sfcWind, huss, pr, prc, prsn, evspsbl, tauu, tauv, hfls, clt
+        [[[Lmon]]]
+            variables = mrsos, mrso, mrfso, mrros
+        [[[SImon]]]
+            variables = sitimefrac, siconc, simass, sithick
+        [[[Omon]]]
+            variables = soga, sos, sob, sosga, mlotst
 
 # optional config for running diagnostics, remove any of these sections
 # to turn off that diagnostic, or the whole thing if you're just running
