CMOR now correctly runs for all compoenents

--- a/run.cfg
+++ b/run.cfg
@@ -138,6 +138,10 @@
         # an optional argument to provide a path for custom cmor variable handlers see: https://github.com/E3SM-Project/e3sm_to_cmip
         custom_handlers_path = /export/baldwin32/projects/my_custom_cmor_handlers
         
+        mpas_mesh_path = /p/user_pub/e3sm/baldwin32/bgc_processing/cmor_test/mpaso.rst.1855-01-01_00000.nc
+        regions_path = /p/user_pub/e3sm/baldwin32/bgc_processing/cmor_test/oEC60to30v3_Atlandtic_region_and_southern_transect.nc
+        vertical_map_path = /p/user_pub/e3sm/baldwin32/bgc_processing/cmor_test/vrt_remap_plev19.nc        
+        
         # list of CMIP6 tables to process the data for. The depedencies of each of these
         # must be present in the list if time-series variablse for the given data type
         [[[Amon]]]
