--- a/.gitignore
+++ b/.gitignore
@@ -152,7 +152,7 @@ tags
 
 #### visualstudiocode ####
 .vscode/*
-!.vscode/settings.json
+.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
