New ilamb config keys

--- a/run.cfg
+++ b/run.cfg
@@ -197,6 +197,11 @@
         run_MOC = True
         ocean_namelist_name = mpaso_in
         seaice_namelist_name = mpassi_in
+    
+    [[ilamb]]
+        run_frequency = 50, 100
+        obs_data_root = /p/user_pub/e3sm/ilamb/DATA
+        variable_list = gpp, rsds, rlds, lai, rsus
 
 
 # data type definitions. If all the cases use short term archiving nothing should have to change
