Updates the sample config, adds a sample yaml config

--- a/sample_configs/run.cfg
+++ b/sample_configs/run.cfg
@@ -1,13 +1,15 @@
+# This is an example config definition with all options turned on, and three dummy cases defined
+# to turn off any job, simply remove it from the config and the job list for each case
+# documentation on the config sections can be found here: https://e3sm-project.github.io/processflow/docs/html/configuration.html
+
+
+
 # mandatory global options
 [global]
     # base project path for all processflow input and output
     project_path = /base/path/for/this/project
     # an email address to send notifications
     email = your_email_address@institution.gov
-    # will remove all native grid output after successful completion
-    native_grid_cleanup = False
-    # local globus node, only needed if using globus for file transfers
-    local_globus_uuid = a871c6de-2acd-11e7-bc7c-22000b9a448b
 
 # optional image hosting options, remove this section to turn off web hosting
 [img_hosting]
@@ -26,8 +28,6 @@
     end_year = 100
     # each case gets its own config section, denoted by the full name of the case inside double brackets
     [[case.id.number.1]]
-        # how to transfer the data, in this case all the data is local
-        transfer_type = local
         # the base path for the data from this case
         local_path = /base/path/for/this/cases/local/data
         # a nice short name to put on plots
@@ -46,39 +46,24 @@
         # CMIP6 metadata for this case
         user_input_json_path = /export/baldwin32/projects/my_project/user_input_case_1.json
     [[case.id.number.2]]
-        # this case is going to be transfered using globus
-        transfer_type = globus
-        # the uuid of the remote globus node, this is the uuid for the edison node
-        remote_uuid = 9d6d994a-6d04-11e5-ba46-22000b92c6ec
-        # the base remote path for this case
-        remote_path = /base/path/for/this/cases/remote/data
+        local_path = /base/path/for/this/cases/data
         short_name = case_2
         native_grid_name = ne30
         native_mpas_grid_name = oEC60to30v3
-        # this case will grab all the datatypes defined below
         data_types = all
-        # this case will only generate climos and run amwg
         job_types = amwg, climo, timeseries, cmor
-        # defined comparisons for this case
-        comparisons = case.id.number.1, case.id.number.3
-        # CMIP6 metadata for this case
+        # this case will have model-to-model diagnostics against only case number 1
+        comparisons = case.id.number.1
         user_input_json_path = /export/baldwin32/projects/my_project/user_input_case_1.json
     [[case.id.number.3]]
-        # this case will be moved with sftp
-        transfer_type = sftp
-        # this is the remote host to ssh into
-        remote_hostname = edison.nersc.gov
-        remote_path = /base/path/for/this/cases/remote/data
+        local_path = /base/path/for/this/cases/data
         short_name = case_3
         native_grid_name = ne30
         native_mpas_grid_name = oEC60to30v3
-        # this case will use atm as well as lnd data
         data_types = atm, lnd, ocn
-        # this case will only generate climos and run e3sm_diags
         job_types = climo, e3sm_diags, timeseries, cmor
-        # defined comparisons for this case
+        # this case will have model-to-model diagnostics against all other defined cases as well as vs obs
         comparisons = all
-        # CMIP6 metadata for this case
         user_input_json_path = /export/baldwin32/projects/my_project/user_input_case_1.json
 
 
@@ -129,10 +114,6 @@
     # cmor requires that the timeseries job produce required variables
     [[cmor]]
         run_frequency = 100
-        # the optional path to a folder with cmor handlers see
-        custom_handler_path = /export/baldwin32/projects/my_project/my_handlers
-        # variables that should be cmorized. These must all be present in the timeseries job variables
-        variable_list = all
         # the master tables provided by the CMOR project, see: https://github.com/PCMDI/cmor
         cmor_tables_path = /export/baldwin32/projects/cmor/Tables
         # an optional argument to provide a path for custom cmor variable handlers see: https://github.com/E3SM-Project/e3sm_to_cmip
@@ -165,6 +146,7 @@
         backend = mpl
         # path to reference observational data
         reference_data_path = /p/cscratch/acme/data/obs_for_acme_diags
+        sets_to_run = lat_lon
 
     # amwg diagnostics options
     [[amwg]]
@@ -201,7 +183,7 @@
     [[ilamb]]
         run_frequency = 50, 100
         obs_data_root = /p/user_pub/e3sm/ilamb/DATA
-        variable_list = gpp, rsds, rlds, lai, rsus
+        variables = gpp, rsds, rlds, lai, rsus
 
 
 # data type definitions. If all the cases use short term archiving nothing should have to change
@@ -213,8 +195,6 @@
     # and only used of running timeseries (on for example lnd), or all the others for 
     # running aprime
     [[atm]]
-        # the remote_path is where to look under the base specified in the case for this type of data
-        remote_path = 'REMOTE_PATH/archive/atm/hist'
         # the naming format for this type
         file_format = 'CASEID.cam.h0.YEAR-MONTH.nc'
         # the local path for where to store the data, or where to look for local data
@@ -227,55 +207,39 @@
         [[[case.id.number.1]]]
             local_path = 'LOCAL_PATH/input/atm'
     [[lnd]]
-        remote_path = 'REMOTE_PATH/archive/lnd/hist'
         file_format = 'CASEID.clm2.h0.YEAR-MONTH.nc'
         monthly = True
         local_path = 'PROJECT_PATH/input/CASEID/lnd'
 
     #  these data types are only needed by aprime
     [[cice]]
-        remote_path = 'REMOTE_PATH/archive/ice/hist'
         file_format = 'mpascice.hist.am.timeSeriesStatsMonthly.YEAR-MONTH-01.nc'
         local_path = 'PROJECT_PATH/input/CASEID/ice'
         monthly = True
     [[ocn]]
-        remote_path = 'REMOTE_PATH/archive/ocn/hist'
         file_format = 'mpaso.hist.am.timeSeriesStatsMonthly.YEAR-MONTH-01.nc'
         local_path = 'PROJECT_PATH/input/CASEID/ocn'
         monthly = True
     [[ocn_restart]]
-        remote_path = 'REMOTE_PATH/archive/rest/REST_YR-01-01-00000/'
         file_format = 'mpaso.rst.REST_YR-01-01_00000.nc'
         local_path = 'PROJECT_PATH/input/CASEID/rest'
-        monthly = False
     [[cice_restart]]
-        remote_path = 'REMOTE_PATH/archive/rest/REST_YR-01-01-00000/'
         file_format = 'mpascice.rst.REST_YR-01-01_00000.nc'
         local_path = 'PROJECT_PATH/input/CASEID/rest'
-        monthly = False
     [[ocn_streams]]
         remote_path = 'REMOTE_PATH/run'
         file_format = 'streams.ocean'
         local_path = 'PROJECT_PATH/input/CASEID/mpas'
-        monthly = False
     [[cice_streams]]
-        remote_path = 'REMOTE_PATH/run'
         file_format = 'streams.cice'
         local_path = 'PROJECT_PATH/input/CASEID/mpas'
-        monthly = False
     [[ocn_in]]
-        remote_path = 'REMOTE_PATH/run'
         file_format = 'mpas-o_in'
         local_path = 'PROJECT_PATH/input/CASEID/mpas'
-        monthly = False
     [[cice_in]]
-        remote_path = 'REMOTE_PATH/run'
         file_format = 'mpas-cice_in'
         local_path = 'PROJECT_PATH/input/CASEID/mpas'
-        monthly = False
     [[meridionalHeatTransport]]
-        remote_path = 'REMOTE_PATH/archive/ocn/hist'
         file_format = 'mpaso.hist.am.meridionalHeatTransport.START_YR-02-01.nc'
         local_path = 'PROJECT_PATH/input/CASEID/mpas'
-        monthly = False
  
